expand Spot & SpotFilters API definition
